--- a/chatapp/css/style.css
+++ b/chatapp/css/style.css
@@ -42,6 +42,7 @@
 .chat-messages li span.text {
     display: block;
     margin-top: 5px;
+    word-wrap:break-word;
 }
 
 .chat-messages li span.text:first-child {
@@ -55,4 +56,10 @@
     background-image: linear-gradient(to bottom, #D9EDF7 0px, #B9DEF0 100%);
     background-repeat: repeat-x;
     border: 1px solid #9ACFEA;
+}
+
+.typing {
+    margin-top: -45px;
+    margin-bottom: 25px;
+    text-align: center;
 }
